fixed bug in collisiondetector and now popper animation works, added "saving" overlay to editor, added angle indicators in editor for jet streams, wall crawlers, bombers, and wheeligators, and added discontinuous selection in editor (hold down shift)

--- a/editor/www/style.css
+++ b/editor/www/style.css
@@ -184,7 +184,7 @@ body {
 	bottom: 0;
 }
 
-#saved {
+#overlay {
 	position: absolute;
 	top: 50%;
 	left: 50%;
